<resources>
    <string name="app_name">Game Suit</string>
    <string name="pemain_1">Pemain 1</string>
    <string name="com">COM</string>
    <string name="vs">VS</string>
    <string name="gunting">Gunting</string>
    <string name="kertas">Kertas</string>
    <string name="batu">Batu</string>
    <string name="welcome_to_game_suit">WELCOME TO GAME SUIT</string>
    <string name="player_one_win">Player 1 Menang!</string>
    <string name="player_two_win">Player 2 Menang!</string>
    <string name="draw">Draw!</string>
    <string name="welcome_to_japan_suit">Welcome to Japan Suit</string>
    <string name="play">PLAY</string>
    <string name="start_game">START GAME</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bermain_suit_melawan_sesama_pemain">Bermain suit melawan sesama pemain.</string>
    <string name="bermain_suit_melawan_komputer">Bermain suit melawan komputer.</string>
    <string name="tuliskan_namamu_di_bawah">Tuliskan namamu di bawah</string>
    <string name="player_vs_cpu">Player vs CPU</string>
    <string name="player_vs_pemain">Player vs Pemain</string>
    <string name="hasil_permainan">Hasil Permainan</string>
    <string name="player_menang">Player Menang!</string>
    <string name="kembali_ke_menu">Kembali Ke Menu</string>
    <string name="main_lagi">Main Lagi</string>
    <string name="pemain_2">Pemain 2</string>
</resources>