<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_dialog_result"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_tittle_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/comic"
                android:paddingBottom="20dp"
                android:text="@string/hasil_permainan"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_messages_dialog"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_tittle_dialog"
                android:layout_centerInParent="true"
                android:fontFamily="@font/comic"
                android:paddingBottom="20dp"
                android:text="@string/player_menang"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="38sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_tryagain"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_messages_dialog"
                android:layout_centerInParent="true"
                android:background="@drawable/bg_btn_purple"
                android:text="@string/main_lagi"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_backtomenu"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_tryagain"
                android:layout_centerInParent="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_btn_orange"
                android:text="@string/kembali_ke_menu"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </RelativeLayout>

    </FrameLayout>

</RelativeLayout>