<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_paper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="70dp"
        android:fontFamily="@font/comic"
        android:rotation="-15"
        android:text="@string/kertas"
        android:textColor="@color/orange"
        android:textSize="40sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_scissor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_paper"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-85sp"
        android:fontFamily="@font/comic"
        android:rotation="-15"
        android:text="@string/gunting"
        android:textColor="@color/light_green"
        android:textSize="40sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_stone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_scissor"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-10sp"
        android:fontFamily="@font/comic"
        android:rotation="-15"
        android:text="@string/batu"
        android:textColor="@color/purple_200"
        android:textSize="40sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_result"
        android:layout_width="185sp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="395sp"
        android:fontFamily="@font/gamja"
        android:maxLength="15"
        android:rotation="-20"
        android:text="@string/vs"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="65sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_player_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/stone_player"
        android:layout_centerVertical="true"
        android:layout_marginStart="10dp"
        android:text="@string/pemain_1"
        android:textColor="@color/blue"
        android:textSize="22sp"
        android:textStyle="bold" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/stone_player"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="10dp"
        android:src="@drawable/batu" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/paper_player"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@id/stone_player"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/kertas" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/scissor_player"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@+id/paper_player"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/gunting" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_com"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/stone_cpu"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="40dp"
        android:text="@string/com"
        android:textColor="@color/blue"
        android:textSize="22sp"
        android:textStyle="bold" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/stone_cpu"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="10dp"
        android:src="@drawable/batu" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/paper_cpu"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@id/stone_cpu"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/kertas" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/scissor_cpu"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@+id/paper_cpu"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/gunting" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/reset"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@id/scissor_cpu"
        android:layout_alignParentEnd="true"

        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:src="@drawable/refresh" />

</RelativeLayout>